--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,10 @@
 name = "haproxy"
 version = "0.1.0"
 authors = ["ubuntu"]
+edition = "2018"
 
 [dependencies]
-docopt = "*"
+docopt = "0.7"
+rustc-serialize = "0.3"
 libc = "0.1.8"
-rustc-serialize = "*"
-fileinput = "*"
+fileinput = "0.3"
